Review input for SITE: fix nits in CIMI docs - update links and nav bar

--- a/site/output/cimi-rest/cimi-rest-machine-templates.html
+++ b/site/output/cimi-rest/cimi-rest-machine-templates.html
@@ -119,7 +119,7 @@ machineConfiguration + machineImage = machineTemplate ===&gt; machine
 </pre>
 
 <p>
-A CIMI client (a <strong>consumer</strong> in CIMI terminology) uses a Machine Template to <a href="cimi-rest-collections.html#create-machine"> create a new Machine</a>; a Machine Template consists of (amongst other attributes) a Machine Configuration and a Machine Image. Generally speaking - many CIMI resources require use of a template for their creation and a template will typically consist of an image plus a configuration resource.
+A CIMI client (a <strong>consumer</strong> in CIMI terminology) uses a Machine Template to <a href="cimi-rest-collections.html#create-machine"> create a new Machine</a>; a Machine Template consists of (amongst other attributes) a Machine Configuration and a Machine Image. Generally speaking - many CIMI resources require the use of a template for their creation and a template will typically consist of an image plus a configuration resource.
 </p>
 
   </div>
