--- a/site/output/command-tools.html
+++ b/site/output/command-tools.html
@@ -110,14 +110,14 @@
 
 <h3 id="command">Using Deltacloud command tool</h3>
 
-<p>Installing the Deltacloud Ruby client also gives you the <strong>deltacloudc</strong> command line tool. This executable uses the Deltacloud client library to speak to the Deltacloud server through the <a href="rest-api.html">REST API</a>. This means that you can control your cloud infrastructure from the command line. The general usage pattern for deltacloudc is:</p><p>
+<p>Installing the Deltacloud Ruby client also gives you the <strong>deltacloudc</strong> command line tool. This executable uses the Deltacloud client library to speak to the Deltacloud server through the <a href="rest-api.html">Deltacloud REST API</a>. This means that you can control your cloud infrastructure from the command line. The general usage pattern for deltacloudc is:</p><p>
 
 </p><pre>$ deltacloudc collection operation [options]</pre>
 
 <dl>
 <dt>Collection</dt>
   <dd>
-  refers to the Deltacloud object collections, such as Instances, Images, Buckets, Realms etc., as described in a greater detail in the <a href="rest-api.html">REST API documentation</a>.
+  refers to the Deltacloud object collections, such as Instances, Images, Buckets, Realms etc., as described in a greater detail in the <a href="rest-api.html">Deltacloud REST API documentation</a>.
   </dd>
   <dt>Operation</dt>
   <dd>
