--- a/site/output/rest-api.html
+++ b/site/output/rest-api.html
@@ -121,7 +121,7 @@ The following terms describe abstractions used in the Apache Deltacloud API. Eac
 
 <ul class="nav nav-list well">
 <li class="nav-header">
-    REST API
+    Deltacloud REST API
   </li>
   <li class="active"><a href="#rest">Introduction</a></li>
   <ul class="nav nav-list">
