Site - update links for Deltacloud Community Call #9

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -146,6 +146,10 @@
 
 <p>Deep dive into a Deltacloud API call, a look at the Deltacloud server gemspec - gems used as clients to cloud providers</p>
 
+<p><br><a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a></p>
+
+<p>Demo of how to use CIMI $select and $expand parameters - Introduction/overview of a deltacloud driver</p>
+
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
         <div class='row'>
