--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -118,37 +118,41 @@
 
 <h3>Past Calls:</h3>
 
-<p><br><a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=HzRbBA8BJ-Q">Deltacloud Community Call #10</a></p>
 
-<p>Working with Deltacloud API clients, Contributing patches, review process, etc</p>
+<p>How to use Deltacloud driver “features”</p>
 
-<p><br><a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
+<p><br><a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a></p>
 
-<p>Networking API discussion, Writing Deltacloud API tests</p>
-
-<p><br><a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a></p>
-
-<p>Adding state to Deltacloud for the CIMI frontend - Datamapper</p>
-
-<p><br><a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a></p>
-
-<p>Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?</p>
-
-<p><br><a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a></p>
-
-<p>How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.</p>
-
-<p><br><a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a></p>
-
-<p>The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.</p>
+<p>Demo of how to use CIMI $select and $expand parameters - Introduction/overview of a deltacloud driver</p>
 
 <p><br><a href="http://youtu.be/KvN0xEVc_N0">Deltacloud Community Call #8</a></p>
 
 <p>Deep dive into a Deltacloud API call, a look at the Deltacloud server gemspec - gems used as clients to cloud providers</p>
 
-<p><br><a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a></p>
 
-<p>Demo of how to use CIMI $select and $expand parameters - Introduction/overview of a deltacloud driver</p>
+<p>The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.</p>
+
+<p><br><a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a></p>
+
+<p>How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.</p>
+
+<p><br><a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a></p>
+
+<p>Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?</p>
+
+<p><br><a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a></p>
+
+<p>Adding state to Deltacloud for the CIMI frontend - Datamapper</p>
+
+<p><br><a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
+
+<p>Networking API discussion, Writing Deltacloud API tests</p>
+
+<p><br><a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
+
+<p>Working with Deltacloud API clients, Contributing patches, review process, etc</p>
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
