--- a/site/output/supported-providers.html
+++ b/site/output/supported-providers.html
@@ -302,7 +302,7 @@
     </tr>
 <tr>
 <td class="provider">
-        <strong>Aruba cloud.it</strong>
+        <strong>Arubacloud</strong>
       </td>
       <td>yes</td>
       <td>yes</td>
@@ -529,9 +529,9 @@
     </tr>
 <tr>
 <td style="text-align:left">
-        <strong>Aruba cloud.it</strong>
+        <strong>Arubacloud</strong>
       </td>
-      <td style="text-align:left"><span style="font-size:x-small">aruba</span></td>
+      <td style="text-align:left"><span style="font-size:x-small">arubacloud</span></td>
       <td style="text-align:left">Username</td>
       <td style="text-align:left">Password</td>
       <td style="text-align:left"></td>
