Site - update links for community call #11

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -118,6 +118,10 @@
 
 <h3>Past Calls:</h3>
 
+<p><br><a href="http://youtu.be/HQ5aPdRSLHo">Deltacloud Community Call #11</a></p>
+
+<p>An introduction/overview of sinatra-rabbit</p>
+
 <p><br><a href="http://www.youtube.com/watch?v=HzRbBA8BJ-Q">Deltacloud Community Call #10</a></p>
 
 <p>How to use Deltacloud driver “features”</p>
